# BadLang

./: .gitignore  CMakeLists.txt  README.md  factorial.bl  out.txt  test  test.asm  test.bl
include/: ast.h  errors.h  grammar.h  keywords.h  label_generator.h  lr1_automaton.h  parser.h  reduction_kind.h  token.h  tokenizer.h
src/: ast.cpp  errors.cpp  grammar.cpp  keywords.cpp  label_generator.cpp  lr1_automaton.cpp  main.cpp  parser.cpp  reduction_kind.cpp  token.cpp  tokenizer.cpp
